--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <section id="hero"
         class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
-        <main>
+        <main class="my-3">
             <h4>Kepada Bapak/Ibu/Saudara/i, </h4>
-            <h1>Billy & Melan</h1>
+            <h1 class="fw-bolder">Berto & Caroline</h1>
             <p>Akan melangsungkan resepsi pernikahan dalam:</p>
             <div class="simply-countdown"></div>
-            <a href="#undang" class="btn btn-lg my-3">Lihat Undangan</a>
+            <a href="#undang" class="btn btn-lg my-3 fw-bolder">Lihat Undangan</a>
         </main>
     </section>
 
